*******************************************************************************
 
 + = Additions since previous version
 ! = Bug fixes since previous version
 ~ = Changes   since previous version
 - = Features that has been removed

=======

1.9.16 (2014-??-??)
 ! Background color does not work in case of a multi-layer map source with 
    only one layer (#252)

1.9.15 (2013-11-20)
 + Selection around GPX track: preview map selection while selecting distance
 + Selection enclosed by GPX track (inner region)
 ! Minimum and maximum zoom level of custom multi-layer map sources in 
    combination with local file-based map sources corrected
 ! Maverick: Corrected that all files are expected to have ".jpg.tile" 
 ! Maplorer: Custom tile width and height reactivated   
    extension, even if it is a PNG file.
 + Updated xerial SQLite library that comes with MOBAC to v1.3.15-M1.

1.9.14 (2013-07-29)
 ~ Custom SQlite map sources can now be specified using a relative path
 ~ BackCountry Navigator format updated - now SQLite based atlases are created
 + Japanese translation added (thanks to "u/ta-ka") [patch #33]
 ! Not translated tooltip corrected [patch #34]
 ! A problem with MapSourceInitializationException fixed (#245)
 ! Memory leak fixed in "TwoNav (RMAP)" atlas format causing an 
    OutOfMemoryError when creating a large atlas
 
1.9.13 (2013-05-29)
 ! HTML injection via Atlas name bug #242
 ! Workaround for Java bug in JPEG writer (if source image has alpha 
    transparency) implemented
 + French translation added (thanks to Jean-Claude Repetto) [patch #31]

1.9.12 (2013-04-17)
 ! Mapsource OpenStreetMap Maps4u.eu updated
 ~ Reduced the number of decimal places of coordinates in GPX files created by 
    MOBAC to 5 places (#242)
 + Custom multi-layer map sources: Each layer can now have an alpha 
    transparency value, specified as space separated list in <layersAlpha>
    element
 ! Bufix of conversion between different coordinate formats (degree, deg/min, 